@@ -5,6 +5,7 @@
  | Switch | Description  |
  | :------: | ----------- |
  | -h     | Give information about available switches and what they do.  |
+ | -v     | Print VSCP daemon version. |
  | -g     | Gives copyright information. |
  | -v     | Give extra information useful for debugging. |
  | -c     | Tell where the program should look for the configuration file. Default on Linux is to look for **vscpd.json** in **/etc/vscp/vscpd.json** Default on windows is to look for this information in the general “application data” folder in a folder called vscp.Typically this is c:/documents and settings/all users/application data/vscp/vscpd.json |
